# Nexy

./: .env.exmple  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.pypi.md  ROADMAP_PROD.md  actions.py  config.py  cursor.md  eslint.config.js  index.html  main.py  nexy-config.py  nexy.config.yaml  nexy.vs.others.md  nexyconfig.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyproject.toml.poetry  requirements.txt  server.py  test.nexy  test_deep_nesting.py  test_jinja_in_tag.py  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.rapport/: summary.md
app/: Layout.html  actions.py  actions.tsx  button.html  controller.py  layout.html  users.py  view.html
app/doc/: controller.py
app/docs/: controller.py
app/eco/: Layout.html  controller.py
app/users/: controller.py  layout.html  view.html
components/Button/: Button.css  Button.html  Button.js  Card.html  __init__.py
docs/: .gitignore  package.json  pyproject.toml
docs/perf/: README.md  baseline.json
docs/src/: globale.css
extensions/vscode/: CHANGELOG.md  README.md  esbuild.js  language-configuration.json  nexy.code-snippets  package.json  pnpm-lock.yaml  test.nexy  tsconfig.json
nexy/: __init__.py  __main__.py  __version__.py  _import.py  app.py  audio.py  components.py  decorators.py  error.py  errors.py  hooks.py  i18n.py  link.py  main.py  nexyconfig.py  router.py  template.py  utils.py  vite.py
nexy/builder/: __init__.py  discovery.py
nexy/cli/: __init__.py  __main__.py
nexy/compiler/: __init__.py
nexy/components/: Link.html  __init__.py
nexy/core/: config.py  decoration.py  models.py  string.py
nexy/frontend/: __init__.py  preact.py  react.py  runtime.ts  solid.py  svelte.py  vite.ts  vue.py
nexy/i18n/: en.json
nexy/parser/: frontmatter.py  scanner.py
nexy/routers/: app.py  context.py
nexy/runtime/: hmr.py  importer.py
nexy/server/: app.py
nexy/utils/: ports.py
scripts/: check_tag_plan.py  perf.py
src/: globale.css  midleware.py
src/app/: app_controller.py  app_module.py  app_services.py
src/components/: count.tsx  data.py  (+3 more)
tasks/: 01-fix-scanner-invalid-tests.md  01-server-hooks.md  02-deduplicate-normalize-dynamic-segment.md  02-performance-benchmarks.md  03-hot-replace-reload.md  04-merge-file-folder-pathname-into-path.md  06-fix-task-job-stubs.md  09-move-cli-utilities-to-utils.md  11-fix-config-singleton.md  12-merge-error-error-modules.md  15-remove-dead-code-comments.md  17-write-conftest-and-test-infra.md  18-hmr-replace-cold-restart-with-uvicorn-reload.md  19-incremental-nexy-compilation.md  21-browser-error-overlay-on-compile-failure.md  23-optimize-dev-startup-time.md  24-fix-vite-hmr-coordination.md  25-improve-cli-error-messages.md  27-clean-console-output-no-emoji.md  28-astral-toolchain-integration.md  29-make-frontmatter-optional.md  31-fix-static-files-root-path.md  34-remove-raw-print-statements.md  35-unify-console-output.md  37-utils-subdirectory-organization.md  38-write-root-documentation.md  README.md
(+280 files in other folders)
