[project]
name = "nexy"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-jinja2>=2.11.9",
]

[tool.mypy]
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]