[project]
name = "nexy"
version = "2.0.0b1"
description = "nexy"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "typer>=0.21.1",
    "uvicorn[standard]>=0.40.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-jinja2>=2.11.9",
]

[project.scripts]
nx = "nexy.cli:CLI"
nexy = "nexy.cli:CLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
files = "nexy"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
